--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.gitignore.io/api/linux,python,virtualenv
 # Edit at https://www.gitignore.io/?templates=linux,python,virtualenv
 
+code/logs/*
+
 ### Linux ###
 *~
 
