--- a/code/learn/configs/config-self_play-mlp_v1.json
+++ b/code/learn/configs/config-self_play-mlp_v1.json
@@ -2,22 +2,23 @@
     "start_ckpt_path": null,
     "training_type": "self_play",
     "game_type": "training",
-    "network_type": "mlp",
-    "representation": "v2",
+    "network_type": "mlp_v1",
+    "representation": "v1",
     "exploration": "v2",
     "value_type": "v1",
-    "log_every_n_steps": 25,
+    "log_every_n_steps": 10,
     "vis_every_n_steps": 250,
     "test_every_n_steps": 500,
+    "update_target_net_every_n_steps": 500,
     "n_test_games": 50,
     "n_other_games": 30,
-    "batch_size": 64,
+    "batch_size": 32,
     "episodes_per_step": 1,
-    "updates_per_episode": 4,
+    "updates_per_episode": 32,
     "initial_learning_rate": 0.0001,
-    "reduce_lr_every_n_steps": 50000,
+    "reduce_lr_every_n_steps": 100000,
     "total_training_steps": 100000,
     "replay_buffer_size": 100000,
-    "replay_buffer_temp": 0.5,
+    "replay_buffer_temp": 0.0,
     "weight_decay": 0.0
 }
