--- a/code/learn/configs/config-self_play-mlp_v1-v2.json
+++ b/code/learn/configs/config-self_play-mlp_v1-v2.json
@@ -6,18 +6,19 @@
     "representation": "v1",
     "exploration": "v1",
     "value_type": "v1",
-    "log_every_n_steps": 10,
-    "vis_every_n_steps": 50,
-    "test_every_n_steps": 100,
-    "n_test_games": 50,
-    "n_other_games": 30,
+    "log_every_n_steps": 50,
+    "vis_every_n_steps": 100,
+    "test_every_n_steps": 500,
+    "n_test_games": 100,
+    "n_other_games": 50,
     "batch_size": 1024,
-    "episodes_per_step": 2,
-    "updates_per_step": 1,
+    "episodes_per_step": 1,
+    "updates_per_step": 4,
+    "improvement_threshold": 0.56,
     "initial_learning_rate": 0.01,
     "total_training_steps": 100000,
-    "replay_buffer_size": 10000,
-    "replay_buffer_temp": 0,
+    "replay_buffer_size": 100000,
+    "replay_buffer_temp": 1.0,
     "weight_decay": 0.0001,
-    "explore_limit": 10
+    "explore_limit": 0
 }
