tweak test play setup

--- a/code/settings_play.json
+++ b/code/settings_play.json
@@ -9,7 +9,7 @@
         "name": "Computer",
         "player_type": "computer",
         "strategy_type": "rl",
-        "network_type": "mlp2_only",
+        "network_type": "mlp_v1",
         "ckpt_path": "best_ckpts/mlp_v1_best_rule_3005_2225.pth",
         "show_deck": false
     },
