--- a/code/learn/configs/config-self_play-mlp_v1-v2.json
+++ b/code/learn/configs/config-self_play-mlp_v1-v2.json
@@ -1,24 +1,24 @@
 {
-    "start_ckpt_path": null,
+    "start_ckpt_path": "logs/self_play_mlp_v1_2020-06-01_22-31/best_self.pth",
     "training_type": "self_play",
     "game_type": "training",
     "network_type": "mlp_v1",
     "representation": "v1",
     "exploration": "v1",
     "value_type": "v1",
-    "log_every_n_steps": 100,
+    "log_every_n_steps": 25,
     "vis_every_n_steps": 250,
-    "test_every_n_steps": 1000,
-    "n_test_games": 100,
-    "n_other_games": 100,
+    "test_every_n_steps": 250,
+    "n_test_games": 50,
+    "n_other_games": 50,
     "batch_size": 1024,
     "episodes_per_step": 1,
-    "updates_per_step": 8,
-    "improvement_threshold": 0.56,
+    "updates_per_step": 4,
+    "improvement_threshold": 0.6,
     "initial_learning_rate": 0.01,
     "total_training_steps": 100000,
     "replay_buffer_size": 100000,
-    "replay_buffer_temp": 1.0,
-    "weight_decay": 0.0,
+    "replay_buffer_temp": 0.5,
+    "weight_decay": 0.0001,
     "explore_limit": 0
 }
