--- a/code/learn/configs/config-self_play-conv_v2-v1.json
+++ b/code/learn/configs/config-self_play-conv_v2-v1.json
@@ -2,22 +2,23 @@
     "start_ckpt_path": null,
     "training_type": "self_play",
     "game_type": "training",
-    "network_type": "conv_v1",
+    "network_type": "conv_v2",
     "representation": "v1",
     "exploration": "v1",
     "value_type": "v1",
-    "log_every_n_steps": 25,
+    "log_every_n_steps": 10,
     "vis_every_n_steps": 250,
     "test_every_n_steps": 250,
-    "n_test_games": 100,
-    "n_other_games": 25,
-    "batch_size": 1024,
+    "n_test_games": 50,
+    "n_other_games": 20,
+    "effective_batch_size": 1024,
+    "max_batch_size": 2048,
     "episodes_per_step": 1,
     "updates_per_step": 1,
     "improvement_threshold": 0.55,
     "initial_learning_rate": 0.01,
-    "total_training_steps": 100000,
-    "reduce_lr_every_n_steps": 50000,
+    "total_training_steps": 120000,
+    "reduce_lr_every_n_steps": 30000,
     "replay_buffer_size": 100000,
     "replay_buffer_temp": 0.0,
     "weight_decay": 0.0001,
