--- a/code/settings_play.json
+++ b/code/settings_play.json
@@ -8,9 +8,9 @@
     "2": {
         "name": "Computer",
         "player_type": "computer",
-        "strategy_type": "rl",
-        "network_type": "mlp_v2",
-        "ckpt_path": "best_ckpts/mlp_v2_best_self_0706_1459.pth",
+        "strategy_type": "rl_2ply",
+        "network_type": "conv_v2_plus",
+        "ckpt_path": "best_ckpts/conv_v2+_best_self_1806_1817.pth",
         "show_deck": false
     },
     "game_type": "computer",
