--- a/code/learn/configs/config-self_play-conv_v3-v1.json
+++ b/code/learn/configs/config-self_play-conv_v3-v1.json
@@ -1,5 +1,5 @@
 {
-    "restore_ckpt_dir": null,
+    "restore_ckpt_dir": "logs/self_play_conv_v4_2020-07-17_11-26",
     "training_type": "self_play",
     "game_type": "training",
     "network_type": "conv_v4",
@@ -18,7 +18,7 @@
     "improvement_threshold": 0.55,
     "initial_learning_rate": 0.1,
     "total_training_steps": 1000000,
-    "reduce_lr_threshold": 5000,
+    "reduce_lr_step_threshold": 5000,
     "replay_buffer_size": 100000,
-    "weight_decay": 0.0
+    "weight_decay": 0.0001
 }
