--- a/code/learn/configs/config-self_play-mlp_v3-v1.json
+++ b/code/learn/configs/config-self_play-mlp_v3-v1.json
@@ -2,23 +2,23 @@
     "restore_ckpt_dir": null,
     "training_type": "self_play",
     "game_type": "training",
-    "network_type": "conv_v2_plus",
-    "representation": "v1",
+    "network_type": "mlp_v3",
+    "representation": "v2",
     "value_type": "v1",
     "log_every_n_steps": 10,
     "vis_every_n_steps": 50,
     "test_every_n_steps": 250,
     "n_test_games": 50,
-    "n_other_games": 20,
+    "n_other_games": 10,
     "effective_batch_size": 1024,
-    "max_train_batch_size": 1024,
-    "max_eval_batch_size": 1024,
+    "max_train_batch_size": 2048,
+    "max_eval_batch_size": 2048,
     "episodes_per_step": 1,
     "updates_per_step": 1,
     "improvement_threshold": 0.55,
-    "initial_learning_rate": 0.01,
+    "initial_learning_rate": 0.1,
     "total_training_steps": 1000000,
-    "reduce_lr_threshold": 10000,
-    "replay_buffer_size": 100000,
+    "reduce_lr_step_threshold": 2500,
+    "replay_buffer_size": 10000,
     "weight_decay": 0.0001
 }
