--- a/code/learn/configs/config-self_play-mlp_v3-v2.json
+++ b/code/learn/configs/config-self_play-mlp_v3-v2.json
@@ -1,9 +1,9 @@
 {
-    "restore_ckpt_dir": null,
+    "restore_ckpt_dir": "logs/self_play_mlp_v3_2020-07-31_18-15",
     "training_type": "self_play",
     "game_type": "training",
-    "network_type": "conv_v2_plus",
-    "representation": "v1",
+    "network_type": "mlp_v3",
+    "representation": "v2",
     "value_type": "v1",
     "log_every_n_steps": 10,
     "vis_every_n_steps": 50,
@@ -11,14 +11,14 @@
     "n_test_games": 50,
     "n_other_games": 20,
     "effective_batch_size": 1024,
-    "max_train_batch_size": 1024,
-    "max_eval_batch_size": 1024,
+    "max_train_batch_size": 2048,
+    "max_eval_batch_size": 2048,
     "episodes_per_step": 1,
     "updates_per_step": 1,
     "improvement_threshold": 0.55,
     "initial_learning_rate": 0.01,
     "total_training_steps": 1000000,
-    "reduce_lr_threshold": 10000,
-    "replay_buffer_size": 100000,
+    "reduce_lr_step_threshold": 5000,
+    "replay_buffer_size": 20000,
     "weight_decay": 0.0001
 }
