--- a/code/settings_play.json
+++ b/code/settings_play.json
@@ -9,11 +9,11 @@
         "name": "Computer",
         "player_type": "computer",
         "strategy_type": "rl_3ply",
-        "network_type": "conv_v2_plus",
-        "ckpt_path": "best_ckpts/conv_v2+_best_self_1806_1817.pth",
+        "network_type": "mlp_v3",
+        "ckpt_path": "best_ckpts/mlp_v3_best_self_0308_0926.pth",
         "show_deck": false
     },
     "game_type": "computer",
-    "representation": "v1",
+    "representation": "v2",
     "value_type": "v1"
 }
