--- a/code/settings_play.json
+++ b/code/settings_play.json
@@ -8,12 +8,8 @@
     "2": {
         "name": "Computer",
         "player_type": "computer",
-        "strategy_type": "rl_3ply",
-        "network_type": "mlp_v3",
-        "ckpt_path": "best_ckpts/mlp_v3_best_self_0308_0926.pth",
-        "show_deck": false
+        "strategy_type": "max",
+        "show_deck": true
     },
-    "game_type": "computer",
-    "representation": "v2",
-    "value_type": "v1"
+    "game_type": "computer"
 }
