fix scores calculation + other bits

--- a/code/learn/configs/config-self_play-mlp.json
+++ b/code/learn/configs/config-self_play-mlp.json
@@ -13,7 +13,9 @@
     "episodes_per_step": 1,
     "updates_per_step": 1,
     "improvement_threshold": 0.55,
-    "initial_learning_rate": 0.01,
+    "initial_learning_rate": 0.1,
+    "restart_learning_rate": 0.01,
+    "lowest_learning_rate": 0.0001,
     "total_training_steps": 1000000,
     "reduce_lr_step_threshold": 2500,
     "replay_buffer_size": 10000,
