--- a/code/learn/configs/config-self_play-mlp3.json
+++ b/code/learn/configs/config-self_play-mlp3.json
@@ -1,5 +1,5 @@
 {
-    "restore_ckpt_dir": null,
+    "restore_ckpt_dir": "logs/self_play_mlp2_2020-10-09_19-44",
     "game_type": "training",
     "network_type": "mlp2",
     "log_every_n_steps": 100,
@@ -15,7 +15,7 @@
     "improvement_threshold": 0.55,
     "initial_learning_rate": 0.01,
     "lowest_learning_rate": 0.0001,
-    "reduce_lr_every_n": 100000,
+    "reduce_lr_every_n": 50000,
     "replay_buffer_size": 20000,
     "weight_decay": 0.0
 }
