--- a/code/settings_play.json
+++ b/code/settings_play.json
@@ -1,6 +1,6 @@
 {
     "1": {
-        "name": "Human",
+        "name": "Tom",
         "player_type": "human",
         "strategy_type": null,
         "show_deck": true
@@ -8,8 +8,10 @@
     "2": {
         "name": "Computer",
         "player_type": "computer",
-        "strategy_type": "max",
-        "show_deck": true
+        "strategy_type": "rl",
+        "network_type": "mlp2",
+        "ckpt_path": "best_ckpts/mlp2_101020_tom_test.pth",
+        "show_deck": false
     },
     "game_type": "computer"
 }
