--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.gitignore.io/api/linux,python,virtualenv
 # Edit at https://www.gitignore.io/?templates=linux,python,virtualenv
 
-code/logs/*
+learn/logs/*
 .vscode
 .DS_Store
 
